// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-73 makeStyles-vertical-78 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <ul
      class="MuiList-root makeStyles-tabs-76 makeStyles-vertical-78 MuiList-dense"
    >
      <li
        class="MuiListItem-root makeStyles-title-80 MuiListItem-dense MuiListItem-gutters"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            title
          </span>
        </div>
      </li>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-root-81 makeStyles-vertical-83 MuiListItem-dense MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            dynamic_form
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        />
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </ul>
    <div
      class="makeStyles-panels-75"
    >
      <div
        class="MuiPaper-root makeStyles-root-87 makeStyles-horizontal-89 MuiPaper-elevation0 MuiPaper-rounded"
        form="[object Object]"
        parent="[object Object]"
      >
        Test Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with form options layout horizontal 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-1 makeStyles-horizontal-7 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <ul
      class="MuiList-root makeStyles-tabs-4 makeStyles-horizontal-7 MuiList-dense"
    >
      <li
        class="MuiListItem-root makeStyles-title-8 MuiListItem-dense MuiListItem-gutters MuiListItem-divider"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            description
          </span>
        </div>
      </li>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-root-9 makeStyles-vertical-11 MuiListItem-dense MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            dynamic_form
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        />
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </ul>
    <div
      class="makeStyles-panels-3"
    >
      <div
        class="MuiPaper-root makeStyles-root-15 makeStyles-horizontal-17 MuiPaper-elevation0 MuiPaper-rounded"
        form="[object Object]"
        parent="[object Object]"
      >
        Test Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with form options layout vertical 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-19 makeStyles-vertical-24 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <ul
      class="MuiList-root makeStyles-tabs-22 makeStyles-vertical-24 MuiList-dense"
    >
      <li
        class="MuiListItem-root makeStyles-title-26 MuiListItem-dense MuiListItem-gutters"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            description
          </span>
        </div>
      </li>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-root-27 makeStyles-vertical-29 MuiListItem-dense MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            dynamic_form
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        />
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </ul>
    <div
      class="makeStyles-panels-21"
    >
      <div
        class="MuiPaper-root makeStyles-root-33 makeStyles-horizontal-35 MuiPaper-elevation0 MuiPaper-rounded"
        form="[object Object]"
        parent="[object Object]"
      >
        Test Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-91 makeStyles-vertical-96 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <ul
      class="MuiList-root makeStyles-tabs-94 makeStyles-vertical-96 MuiList-dense"
    >
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-root-99 makeStyles-vertical-101 MuiListItem-dense MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            dynamic_form
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        />
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </ul>
    <div
      class="makeStyles-panels-93"
    >
      <div
        class="MuiPaper-root makeStyles-root-105 makeStyles-horizontal-107 MuiPaper-elevation0 MuiPaper-rounded"
        form="[object Object]"
        parent="[object Object]"
      >
        Test Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-37 makeStyles-vertical-42 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <ul
      class="MuiList-root makeStyles-tabs-40 makeStyles-vertical-42 MuiList-dense"
    >
      <li
        class="MuiListItem-root makeStyles-title-44 MuiListItem-dense MuiListItem-gutters"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            description
          </span>
        </div>
      </li>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-root-45 makeStyles-vertical-47 MuiListItem-dense MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            dynamic_form
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        />
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </ul>
    <div
      class="makeStyles-panels-39"
    >
      <div
        class="MuiPaper-root makeStyles-root-51 makeStyles-horizontal-53 MuiPaper-elevation0 MuiPaper-rounded"
        form="[object Object]"
        parent="[object Object]"
      >
        Test Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-55 makeStyles-vertical-60 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <ul
      class="MuiList-root makeStyles-tabs-58 makeStyles-vertical-60 MuiList-dense"
    >
      <li
        class="MuiListItem-root makeStyles-title-62 MuiListItem-dense MuiListItem-gutters"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-noWrap MuiTypography-displayBlock"
          >
            title
          </span>
        </div>
      </li>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root makeStyles-root-63 makeStyles-vertical-65 MuiListItem-dense MuiListItem-gutters MuiListItem-divider MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            dynamic_form
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense"
        />
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </ul>
    <div
      class="makeStyles-panels-57"
    >
      <div
        class="MuiPaper-root makeStyles-root-69 makeStyles-horizontal-71 MuiPaper-elevation0 MuiPaper-rounded"
        form="[object Object]"
        parent="[object Object]"
      >
        Test Panel
      </div>
    </div>
  </div>
</div>
`;
